--- a/src/app/routes/users-page/users-page.component.html
+++ b/src/app/routes/users-page/users-page.component.html
@@ -1,6 +1,6 @@
 <div class="top-panel">
   <app-header class="header">Users</app-header>
-  <app-button class="add-user-button" (onClick)="showPopup()" name="Add user"></app-button>
+  <app-button class="add-button" (onClick)="showPopup()" name="Add user"></app-button>
 </div>
 <users-table class="users-table" [users]="users" (onRemove)="removeUser($event)" (onEdit)="editUser($event)"></users-table>
 <add-user-form *ngIf="showAddUser" class="user-form" (onClose)="closePopup()" (onFetchUsers)="fetchUsers()"></add-user-form>
