--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url('https://fonts.googleapis.com/css?family=Rubik');
+@import url('https://fonts.googleapis.com/css?family=PT+Sans+Caption');
 
 * {
   margin: 0;
@@ -11,7 +13,7 @@ html,
 body {
   height: 100%;
   min-height: 100%;
-  font-family: Raleway;
+  font-family: 'PT Sans Caption';
 }
 
 body {
