--- a/web/src/app/components/inputs/input/input.component.html
+++ b/web/src/app/components/inputs/input/input.component.html
@@ -1,3 +1,3 @@
 <label>
-  <input type="text" value={{defaultValue}} placeholder="{{placeholder}}" (input)="onChange($event);" />
+  <input type={{type}} value={{defaultValue}} placeholder="{{placeholder}}" (input)="onChange($event);" />
 </label>
