\Shew the list of attendees on the event page
closes #8

--- a/web/src/app/routes/event-page/event-page.component.css
+++ b/web/src/app/routes/event-page/event-page.component.css
@@ -1,4 +1,35 @@
+:host {
+  width: 100%;
+}
 .attendees {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.top-panel {
+  display: grid;
+  position: sticky;
+  top: 0;
+  flex-flow: row wrap;
+  grid-template-columns: 1fr;
+  height: 100px;
+}
+
+.header {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  justify-self: end;
+  margin-right: 20px;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.button {
+  margin: 0 10px;
 }
