--- a/web/src/app/routes/event-page/event-page.component.html
+++ b/web/src/app/routes/event-page/event-page.component.html
@@ -1,45 +1,18 @@
-<div *ngIf="event">
-  <h1>{{ event.name }}</h1>
-  <a routerLink="/events">Back</a>
-  <app-button class="register-button" *ngIf="authorized" (onClick)="register()" name="Register"></app-button>
-  <h2>Pretenders</h2>
-  <div class="attendees">
-    <ng-container *ngFor="let attendee of pretenders">
-      <div>
-        {{ attendee.user.firstName }}
-        {{ attendee.user.lastName }}
-      </div>
-      <div>
-        <app-button class="register-button" *ngIf="eventOwner" (onClick)="accept(attendee.userId)" name="Accept"></app-button>
-        <app-button class="register-button" *ngIf="eventOwner" (onClick)="removeUser(attendee.userId)" name="Decline"></app-button>
-        <app-button class="register-button" *ngIf="isMyself(attendee)" (onClick)="removeUser(attendee.userId)" name="Leave"></app-button>
-      </div>
-    </ng-container>
+<div class="event" *ngIf="event">
+  <div class="top-panel">
+    <app-header class="header">{{ event.name }}</app-header>
+    <div class="buttons">
+      <app-button class="button" *ngIf="canRegister" (onClick)="register()" name="Register"></app-button>
+      <app-button class="button" (onClick)="goBack()" name="Back"></app-button>
+    </div>
   </div>
-  <h2>Participants</h2>
-  <div>
-    <ng-container *ngFor="let attendee of participants">
-      <div>
-        {{ attendee.user.firstName }}
-        {{ attendee.user.lastName }}
-      </div>
-      <div>
-        <app-button class="register-button" *ngIf="eventOwner" (onClick)="removeUser(attendee.userId)" name="Kick"></app-button>
-        <app-button class="register-button" *ngIf="isMyself(attendee)" (onClick)="removeUser(attendee.userId)" name="Leave"></app-button>
-      </div>
-    </ng-container>
-  </div>
-  <h2>Invited</h2>
-  <div>
-    <ng-container *ngFor="let attendee of invited">
-      <div>
-        {{ attendee.user.firstName }}
-        {{ attendee.user.lastName }}
-      </div>
-      <div>
-        <app-button class="register-button" *ngIf="eventOwner" (onClick)="removeUser(attendee.userId)" name="Remove"></app-button>
-        <app-button class="register-button" *ngIf="isMyself(attendee)" (onClick)="removeUser(attendee.userId)" name="Leave"></app-button>
-      </div>
-    </ng-container>
-  </div>
+  <app-attendees-table *ngIf="pretenders.length > 0" [eventOwner]="eventOwner" (onAdd)="accept($event)" (onRemove)="removeUser($event)"
+    title="Pretenders" [attendees]="pretenders">
+  </app-attendees-table>
+  <app-attendees-table *ngIf="participants.length > 0" [eventOwner]="eventOwner" (onRemove)="removeUser($event)" title="Participants"
+    [attendees]="participants">
+  </app-attendees-table>
+  <app-attendees-table *ngIf="invited.length > 0" [eventOwner]="eventOwner" (onRemove)="removeUser($event)" title="Invited"
+    [attendees]="invited">
+  </app-attendees-table>
 </div>
