Added user page
closes #21

--- a/web/src/app/components/sidebar/sidebar.component.html
+++ b/web/src/app/components/sidebar/sidebar.component.html
@@ -15,8 +15,8 @@
       </li>
     </ul>
   </nav>
-  <div class="option sign-in" *ngIf="authorized" (click)="handleLogout($event)">
-    Logout
+  <div class="option sign-in" *ngIf="authorized" [routerLink]="['/users' , userId]">
+    Profile
   </div>
   <div class="option sign-in" *ngIf="!authorized" (click)="handleLogin($event)">
     Login
