--- a/web/src/app/routes/user-page/user-page.component.css
+++ b/web/src/app/routes/user-page/user-page.component.css
@@ -29,3 +29,13 @@
 .button {
   margin: 0 10px;
 }
+
+.user-content {
+  display: flex;
+  margin-top: 20px;
+  justify-content: center;
+}
+
+.value {
+  margin-left: 20px;
+}
