#9 Sign in with VK

--- a/web/src/app/components/login-form/login-form.component.html
+++ b/web/src/app/components/login-form/login-form.component.html
@@ -10,6 +10,7 @@
         <app-submit class="input" value="Log In"></app-submit>
       </fieldset>
       <div class="register-switch"><label for='form-switch'><span class="switch-text">Register</span></label></div>
+      <a href="https://oauth.vk.com/authorize?client_id=6729877&display=page&redirect_uri=http://localhost:4200/auth/vk&scope=email&response_type=code&v=5.87" class="login-vk">Login with VK</a>
     </form>
   </div>
   <div class="register">
@@ -25,6 +26,7 @@
         <app-submit class="input" value="Register"></app-submit>
       </fieldset>
       <div class="register-switch"><label for='form-switch'><span class="switch-text">Already have account?</span></label></div>
+      <a href="https://oauth.vk.com/authorize?client_id=6729877&display=page&redirect_uri=http://localhost:4200/auth/vk&scope=email&response_type=code&v=5.87" class="login-vk">Login with VK</a>
     </form>
   </div>
 
