fix tslint errors in web project

--- a/web/src/app/app.component.css
+++ b/web/src/app/app.component.css
@@ -9,7 +9,7 @@
   justify-content: center;
 }
 
-login-form {
+app-login-form {
   display: flex;
   justify-content: center;
   align-items: center;
