--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div id="root">
-  <sidebar (onLoginClick)="showLoginPopup()"></sidebar>
-  <login-form *ngIf="showLogin" (onClose)="closeLoginPopup($event)"></login-form>
+  <app-sidebar (loginClick)="showLoginPopup()"></app-sidebar>
+  <app-login-form *ngIf="showLogin" (close)="closeLoginPopup($event)"></app-login-form>
   <div class="content">
     <router-outlet></router-outlet>
   </div>
