--- a/web/src/app/components/events/events.component.html
+++ b/web/src/app/components/events/events.component.html
@@ -33,9 +33,9 @@
     <div class="column description">
       {{ event.description }}
     </div>
-    <dropdown-menu>
+    <app-dropdown-menu>
       <span>Edit</span>
       <span (click)="removeEvent(event)">Delete</span>
-    </dropdown-menu>
+    </app-dropdown-menu>
   </ng-container>
 </div>
