--- a/web/src/app/routes/events-page/components/events-table/events-table.component.html
+++ b/web/src/app/routes/events-page/components/events-table/events-table.component.html
@@ -39,9 +39,9 @@
         </div>
       </div>
     </div>
-    <!-- <dropdown-menu>
+    <!-- <app-dropdown-menu>
       <span>Edit</span>
       <span (click)="removeEvent(event)">Delete</span>
-    </dropdown-menu> -->
+    </app-dropdown-menu> -->
   </ng-container>
 </div>
