--- a/web/src/app/routes/event-page/components/attendees-table/attendees-table.component.html
+++ b/web/src/app/routes/event-page/components/attendees-table/attendees-table.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="attendees-grid">
-    <div class="title">{{title}}</div>
+    <div class="title">{{ title }}</div>
     <div class="header name">
       Name
     </div>
@@ -18,9 +18,9 @@
         Samara
       </div>
       <div class="column options">
-        <app-icon-button class="button" *ngIf="showAdd(attendee)" (onClick)="handleAdd(attendee)" image="/assets/baseline-add_circle_outline-24px.svg"></app-icon-button>
-        <app-icon-button class="button" *ngIf="showRemove(attendee)" (onClick)="handleRemove(attendee)" image="/assets/baseline-remove_circle_outline-24px.svg"></app-icon-button>
-        <app-icon-button class="button" *ngIf="showLeave(attendee)" (onClick)="handleRemove(attendee)" image="/assets/baseline-directions_run-24px.svg"
+        <app-icon-button class="button" *ngIf="showAdd(attendee)" (click)="handleAdd(attendee)" image="/assets/baseline-add_circle_outline-24px.svg"></app-icon-button>
+        <app-icon-button class="button" *ngIf="showRemove(attendee)" (click)="handleRemove(attendee)" image="/assets/baseline-remove_circle_outline-24px.svg"></app-icon-button>
+        <app-icon-button class="button" *ngIf="showLeave(attendee)" (click)="handleRemove(attendee)" image="/assets/baseline-directions_run-24px.svg"
           name="Leave">
         </app-icon-button>
       </div>
