--- a/web/src/app/routes/users-page/users-page.component.html
+++ b/web/src/app/routes/users-page/users-page.component.html
@@ -1,8 +1,8 @@
 <div class="top-panel">
   <app-header class="header">Users</app-header>
-  <app-button class="add-button" (onClick)="showPopup()" name="Add user"></app-button>
+  <app-button class="add-button" (click)="showPopup()" name="Add user"></app-button>
 </div>
-<users-table class="users-table" [users]="users" (onRemove)="removeUser($event)" (onEdit)="editUser($event)"></users-table>
-<add-user-form *ngIf="showAddUser" class="user-form" (onClose)="closePopup()" (onFetchUsers)="fetchUsers()"></add-user-form>
-<edit-user-form *ngIf="showEditUser" class="user-form" [editedUser]="editedUser" (onClose)="closeEditPopup()" (onFetchUsers)="fetchUsers()">
-</edit-user-form>
+<app-users-table class="users-table" [users]="users" (remove)="removeUser($event)" (edit)="editUser($event)"></app-users-table>
+<app-add-user-form *ngIf="showAddUser" class="user-form" (close)="closePopup()" (fetchUsers)="fetchUsers()"></app-add-user-form>
+<app-edit-user-form *ngIf="showEditUser" class="user-form" [editedUser]="editedUser" (close)="closeEditPopup()" (fetchUsers)="fetchUsers()">
+</app-edit-user-form>
