--- a/web/src/app/components/button/button.component.html
+++ b/web/src/app/components/button/button.component.html
@@ -1,1 +1,4 @@
-<a href="#" (click)="handleClick($event)">{{ name }}</a>
+<a href="#" [class]="form" (click)="handleClick($event)">
+  <img [src]="'/assets/' + icon" *ngIf="icon" class="image" />
+  {{ value }}
+</a>
