--- a/web/src/app/components/inputs/submit/submit.component.css
+++ b/web/src/app/components/inputs/submit/submit.component.css
@@ -4,10 +4,9 @@
 
 input {
   flex: 1;
-  width: 100%;
   border-width: 1px;
   border-style: solid;
-  padding: 16px;
+  min-height: 56px;
   outline: 0;
   font-family: inherit;
   font-size: 0.95em;
