--- a/web/src/app/components/inputs/submit/submit.component.css
+++ b/web/src/app/components/inputs/submit/submit.component.css
@@ -16,6 +16,11 @@ input {
   cursor: pointer;
 }
 
+input.disabled {
+  pointer-events: none;
+  opacity: 0.4;
+}
+
 input:hover {
   background: #17c;
 }
