--- a/web/src/app/routes/event-page/event-page.component.css
+++ b/web/src/app/routes/event-page/event-page.component.css
@@ -33,3 +33,40 @@
 .button {
   margin: 0 10px;
 }
+
+.edit-cover-layout {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.edit-cover-preview {
+  width: 72px;
+  height: 72px;
+}
+
+.edit-cover-upload-progress {
+  flex: 1;
+  margin-left: 16px;
+}
+
+.edit-cover-change {
+  cursor: pointer;
+  margin-left: 16px;
+}
+
+.edit-cover-remove {
+  margin-left: 16px;
+}
+
+.edit-cover-change app-button {
+  pointer-events: none;
+}
+
+.edit-cover-change input {
+  opacity: 0;
+  position: absolute;
+  z-index: -1;
+}
